--- a/Sitio web Basico/css/style.css
+++ b/Sitio web Basico/css/style.css
@@ -15,6 +15,11 @@
 }
 
 /* Estilos generales */
+
+html {
+  scroll-behavior: smooth;
+}
+
 h1,
 h2 {
   font-family: 'Pilowlava-Atome', cursive;
@@ -209,4 +214,17 @@ footer {
 @font-face {
   font-family: 'Pilowlava-Atome';
   src: url(../fonts/Pilowlava-Atome.woff2) format('woff2');
+}
+
+@media (prefers-color-scheme: dark) {
+ body {
+  color: var(--white);
+  background: var(--black);
+  }
+  .main-titulo{
+    color: var(--bg-fondo)
+  }
+  .main-apartado-parrafo{
+    color: var(--bg-tarjeta)
+  }
 }
