--- a/Sitio web Basico/css/style.css
+++ b/Sitio web Basico/css/style.css
@@ -6,6 +6,8 @@
   --bg-tarjeta: #695611;
   --black: #111636;
   --white: #FBFBFE;
+  --green: #00FF00;
+  --blue: #49adf0;
 }
 
 * {
@@ -15,7 +17,6 @@
 }
 
 /* Estilos generales */
-
 html {
   scroll-behavior: smooth;
 }
@@ -46,169 +47,212 @@ a {
   text-decoration: none;
 }
 
-header,
-footer {
-  width: 100%;
+button {
+    border: none;
+    border-radius: 0.9em;
+    cursor: pointer;
+    padding: 0.8em 1em;
+    transition: all ease-in-out 0.2s;
+    font-size: .88rem;
+  }
+
+button:hover {
+opacity: 0.3;
 }
 
 .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.col {
+  flex-direction: column;
 }
 
 /* Header  */
 .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background: var(--bg-fondo);
 }
 
-.header-section {
-  flex-direction: row;
+.header--section {
   justify-content: space-between;
   padding: 0rem 1rem;
 }
 
-.header-nombre {
-  flex-direction: row;
+.header__nombre {
   padding: 1.8rem 2.5rem;
   gap: 2rem;
-  flex-wrap: wrap;
 }
 
-.header-logo {
+.header__logo {
   border-radius: 50%;
 }
 
-.header-tabs {
-  flex-direction: row;
-  justify-content: center;
+.header__tabs {
   gap: 1.25rem;
 }
 
-.header-hero {
+.header__hero {
   padding: 1.5rem;
 
-  p {
+  .header--p {
     text-align: center;
     opacity: 0.3;
     max-width: 550px;
     padding: 1.2rem;
   }
-}
 
-.header-titulo {
-  font-size: 2.5rem;
+  .header__titulo {
+    font-size: 2.5rem;
+  }
 }
 
 /* Main */
-.main {
-  display: flex;
-  flex-direction: column;
+.sec__main {
   justify-content: space-between;
   max-width: 980px;
-
 }
 
-.main-section {
-  flex-direction: row;
-  justify-content: center;
+.main__aside {
   gap: 1rem;
-
-  .main-aside-proyecto {
-    align-items: center;
-
-    p {
-      width: 100%;
-      padding: 0.7rem 2.5rem;
-      border: 1px solid var(--black);
-    }
-  }
-
-  .main-apartado {
-    align-items: center;
-    gap: 1.2rem;
-  }
-
-  .main-apartado-section {
-    background: var(--bg-fondo);
-    border-top-right-radius: 0.75rem;
-    z-index: 1;
-
-    .main-apartado-titulo {
-      padding: 0.5rem 0.9rem;
-    }
-
-    .main-apartado-fecha,
-    .main-apartado-parrafo {
-      font-size: 0.9rem;
-      padding: 0.3rem 1.2rem;
-    }
-
-    .main-apartado-cuadro {
-      z-index: 2;
-      background: var(--white);
-      border-bottom-left-radius: 0.75rem;
-    }
-  }
-
-  .main-apartado-section-education {
-    border-bottom-left-radius: 0.75rem;
-
-    h6 {
-      font-size: 0.65rem;
-      padding: 0rem 1.2rem;
-    }
-  }
+  align-items: stretch;
 }
 
-.main-titulo {
+.main__apartado {
+  justify-content: space-between;
+  gap: 1.2rem;
+}
+
+.main__titulo {
   text-align: center;
   padding: 1.25rem;
   color: var(--bg-tarjeta);
 }
 
-.main-resena {
-  justify-content: center;
-  align-items: center;
+.main__apartado__aside {
+  gap: 1.2rem;
+}
+
+.main__apartado__aside--p {
+  width: 100%;
+  padding: 0.7rem 2.5rem;
+  border: 1px solid var(--black);
+}   
+
+.main__apartado__section {
+    background: var(--bg-fondo);
+    border-top-right-radius: 0.75rem;
+    z-index: 1;
+}
+
+.main__titulo--h4 {
+  padding: 0.5rem 0.9rem;
+}
+
+.main__apartado__fecha,
+.main__apartado__parrafo {
+      font-size: 0.9rem;
+      padding: 0.3rem 1.2rem;
+}
+    
+.main__apartado__cuadro {
+  z-index: 2;
+  background: var(--white);
+  border-bottom-left-radius: 0.75rem;
+}
+
+.main__apartado__education {
+    border-bottom-left-radius: 0.75rem;
+    border: 1px solid var(--bg-tarjeta);
+}
+    
+.main__titulo--h6 {
+      font-size: 0.65rem;
+      padding: 0rem 1.2rem;
+}
+
+.main__article {
   background-color: var(--white);
   padding: 2rem;
 }
 
-.main-resena-aside {
-  flex-direction: row;
+.main__resena {
   gap: 5rem;
   border-radius: 0.75rem;
   background-color: var(--bg-fondo);
-  z-index: 1;
 }
 
-.main-resena-aside-article {
-  border-radius: 0.75rem;
+.main__resena--section {
   background-color: var(--bg-tarjeta);
-  z-index: 2;
   gap: 1rem;
-
-  h4,
-  p {
-    text-align: center;
-    padding: .5rem;
-  }
-
-  p {
-    font-size: 0.9rem;
-  }
 }
 
 .footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding: 1rem;
   background: var(--bg-fondo);
+  p {
+    width: 50%;
+  }
+}
+
+/* PROYECTO */
+.main__cards {
+  padding: 1rem;
+  flex-wrap: wrap;
+  align-items: stretch;
+  gap: 2rem;
+}
+
+.main__card {
+  padding:  0 0.5rem;
+  max-width: 350px;
+  border: 1px solid var(--bg-fondo);
+}
+
+.card--ol {
+  padding-left: 0.9rem;
+ }
+
+/* ARTICULO */
+.articulo {
+  margin: 1.2rem 0;
+}
+
+.btn-articulo {
+  margin: 0.5rem 0.9rem;
+  background-color: var(--green);
+}
+
+/* CONTACTO */
+.main__form {
+  align-items: stretch;
+  gap: 2rem;
+}
+
+.input, textarea {
+  padding: 0.5rem;
+  border: 1px solid var(--bg-fondo);
+  border-radius: 0.5rem;
+}
+
+.btn-contacto {
+  background-color: var(--blue);
+}
+
+.info__contacto {
+  justify-content: start;
+  max-width: 350px;
+  border: 1px solid red;
+  i, p{
+   color: var(--blue);
+  }
+}
+
+iframe {
+  width: 768px;
+  border:none;
+  max-height: 160px;
 }
 
 @font-face {
@@ -216,7 +260,7 @@ footer {
   src: url(../fonts/Pilowlava-Atome.woff2) format('woff2');
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
  body {
   color: var(--white);
   background: var(--black);
@@ -226,5 +270,20 @@ footer {
   }
   .main-apartado-parrafo{
     color: var(--bg-tarjeta)
+  }
+} */
+
+
+@media (max-width: 768px) {
+  .header-section {
+    flex-direction: column;
+  }
+
+  .main {
+    flex-wrap: wrap;
+  }
+
+  .main-section {
+    flex-wrap: wrap;
   }
 }
