--- a/Sitio web Basico/css/style.css
+++ b/Sitio web Basico/css/style.css
@@ -5,10 +5,11 @@
   --bg-fondo: #26B0B1;
   --bg-tarjeta: #695611;
   --black: #111636;
-  --white: #FBFBFE;
+  --white: #fbfbfe;
   --main-fondo: #bbd3bc;
   --blue: #49adf0;
   --main-fondo-2: #e5e5f7;
+  --error: #ffb6c1;
 }
 
 * {
@@ -270,6 +271,26 @@ textarea {
   border-radius: 0.5rem;
 }
 
+.input:focus,
+textarea:focus {
+  outline: none;
+  border: 2px dotted var(--blue);
+}
+
+.input[type="email"]:focus:invalid {
+  background-color: var(--error);
+}
+
+.error {
+  color: var(--error);
+  font-size: 0.75rem;
+  display: none;
+}
+
+input:invalid+.error {
+  display: block;
+}
+
 .btn-contacto {
   background-color: var(--blue);
 }
@@ -360,7 +381,6 @@ textarea {
 
     .contacto--aside {
       margin: 1.5rem 0;
-
     }
   }
 
