Navegación actualizada para resaltar la pestaña actual para mejorar la experiencia del usuario.  Se agregó una clase activa al elemento ancla de la pestaña seleccionada, cambiando su apariencia para distinguirla visualmente de otras pestañas.

--- a/Sitio web Basico/css/style.css
+++ b/Sitio web Basico/css/style.css
@@ -137,6 +137,11 @@ button:hover {
   visibility: visible;
 }
 
+.active{
+  color: var(--bg-tarjeta);
+  border-bottom: 2px solid var(--bg-tarjeta);
+}
+
 .header__hero {
   padding: 1.5rem;
 
